# job-application-assistant

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: agent.py  main.py  parser.py  tools.py
frontend/: index.html
