[project]
name = "job-application-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
